Stop sending customMenu-sysadmin changes to edge